--- a/Views/Rooms/Create.cshtml
+++ b/Views/Rooms/Create.cshtml
@@ -20,6 +20,11 @@
                 <input asp-for="Price" class="input-one" />
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
+            <div class="d-flex flex-column">
+                <label asp-for="MaxGuest" class="control-label mt-3"></label>
+                <input asp-for="MaxGuest" class="input-one" />
+                <span asp-validation-for="MaxGuest" class="text-danger"></span>
+            </div>
             @Html.HiddenFor(mode => mode.HotelId)
             <div class="form-group mt-3 center-screen">
                 <input type="submit" value="Create" class="bttn button-one w-250" />
