--- a/Views/Rooms/Details.cshtml
+++ b/Views/Rooms/Details.cshtml
@@ -22,7 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Price)
         </dd>
-
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.MaxGuest)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.MaxGuest)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Hotel)
         </dt>
