--- a/Views/Rooms/Edit.cshtml
+++ b/Views/Rooms/Edit.cshtml
@@ -23,6 +23,11 @@
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
+            </div
+            ><div class="form-group">
+                <label asp-for="MaxGuest" class="control-label"></label>
+                <input asp-for="MaxGuest" class="form-control" />
+                <span asp-validation-for="MaxGuest" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" /> |
