--- a/Views/FlightBookings/Create.cshtml
+++ b/Views/FlightBookings/Create.cshtml
@@ -37,7 +37,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="bttn button-two w-250 mt-3" href="javascript:history.go(-1)">Back to List</a>
 </div>
 
 @section Scripts {
