--- a/Views/Hotels/Create.cshtml
+++ b/Views/Hotels/Create.cshtml
@@ -15,6 +15,11 @@
                 <input asp-for="HotelName" class="input-one " />
                 <span asp-validation-for="HotelName" class="text-danger"></span>
             </div>
+        <div class="d-flex flex-column">
+            <label asp-for="City" class="control-label mt-3"></label>
+            <input asp-for="City" class="input-one col-12 " />
+            <span asp-validation-for="City" class="text-danger"></span>
+        </div>
             <div class="d-flex flex-column">
                 <label asp-for="HotelLocation" class="control-label mt-3"></label>
                 <input asp-for="HotelLocation" class="input-one col-12 " />
