--- a/Views/Hotels/Details.cshtml
+++ b/Views/Hotels/Details.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.HotelName)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.City)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.City)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HotelLocation)
         </dt>
