--- a/Views/Hotels/Edit.cshtml
+++ b/Views/Hotels/Edit.cshtml
@@ -19,6 +19,11 @@
                 <span asp-validation-for="HotelName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="City" class="control-label"></label>
+                <input asp-for="City" class="form-control" />
+                <span asp-validation-for="City" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="HotelLocation" class="control-label"></label>
                 <input asp-for="HotelLocation" class="form-control" />
                 <span asp-validation-for="HotelLocation" class="text-danger"></span>
