--- a/Views/FlightBookings/Create.cshtml
+++ b/Views/FlightBookings/Create.cshtml
@@ -31,13 +31,13 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
+                <a class="bttn button-two w-250 mt-3" asp-action-flightId="@Model.FlightId">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a class="bttn button-two w-250 mt-3" href="javascript:history.go(-1)">Back to List</a>
 </div>
 
 @section Scripts {
