--- a/Views/FlightBookings/Delete.cshtml
+++ b/Views/FlightBookings/Delete.cshtml
@@ -29,6 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PassportNumber)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.NumberOfPassenger)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.NumberOfPassenger)
+        </dd>
     </dl>
 
     <form asp-action="DeleteConfirmed" method="post">
