--- a/Views/FlightBookings/Index.cshtml
+++ b/Views/FlightBookings/Index.cshtml
@@ -18,7 +18,8 @@
             <th>
                PassportNumber
             </th>
-            <th></th>
+            <th>Number Of Passengers</th>
+            <th>Actions</th>
         </tr>
     </thead>
     <tbody>
@@ -34,7 +35,10 @@
                 @Html.DisplayFor(modelItem => item.PassportNumber)
             </td>
             <td>
-                <a asp-controller="FlightBookings" class="bttn button-one w-125" asp-route-id="@item.Id" asp-action="Edit">Edit Booking</a>
+                @Html.DisplayFor(modelItem => item.NumberOfPassenger)
+            </td>
+            <td>
+                <a asp-controller="FlightBookings" class="btn btn-warning" asp-route-id="@item.Id" asp-action="Edit">Edit Booking</a>
 
                 <a asp-controller="FlightBookings" class="btn btn-danger" asp-route-id="@item.Id" asp-action="Delete">Cancel Booking</a>
 
