--- a/Views/Flights/Edit.cshtml
+++ b/Views/Flights/Edit.cshtml
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @Html.HiddenFor(model=>model.FlightId)
             <div class="form-group">
                 <label asp-for="FlightNumber" class="control-label"></label>
                 <input asp-for="FlightNumber" class="form-control" />
