Book this flight Is Fixed.

--- a/Views/FlightBookings/Create.cshtml
+++ b/Views/FlightBookings/Create.cshtml
@@ -31,7 +31,7 @@
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
-                <a class="bttn button-two w-250 mt-3" asp-action-flightId="@Model.FlightId">Back to List</a>
+                <a class="bttn button-two w-250 mt-3" asp-action="Index" >Back to List</a>
             </div>
         </form>
     </div>
