Final Push For Submission

--- a/Views/Hotels/Index.cshtml
+++ b/Views/Hotels/Index.cshtml
@@ -31,7 +31,7 @@
                         <p>@hotel.Description</p>
                         <div class="center-screen">
                             <a asp-controller="Hotels" class="bttn button-one w-250" asp-action="Details" asp-route-hotelId="@hotel.HotelId">View Details</a>
-                            <a href='javascript:history.go(-1)' class="bttn button-two w-250 ms-2">Back to List</a>
+                            <a asp-controller="Rooms" class="bttn button-two w-250" asp-action="Index" asp-route-hotelId="@hotel.HotelId">View Rooms</a>
                         </div>
                     </div>
                 }
