--- a/Areas/NorthPole/Views/_ViewImports.cshtml
+++ b/Areas/NorthPole/Views/_ViewImports.cshtml
@@ -1,4 +1,3 @@
 ﻿@using COMP2139_Assignment1
-@using COMP2139_Assignment1.Models
-@using Microsoft.AspNetCore.Identity
+@using COMP2139_Assignment1.Areas.NorthPole.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
