Added Registration (Need To Fix Email)

--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -19,8 +19,12 @@
                     <a class="nav-link " asp-area="NorthPole" asp-controller="Hotels" asp-action="Index"><i class="fa-solid fa-hotel"></i> Hotel</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " asp-area="NorthPole" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i> Car</a>
+                    <a class="nav-link " asp-area="NorthPole" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i>Car</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register"><i class="fa fa-user-plus" aria-hidden="true"></i> Register</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link " asp-area="NorthPole" asp-controller="Home" asp-action="About"><i class="fa-solid fa-circle-question"></i> About</a>
                 </li>
