--- a/Views/Shared/_Navbar.cshtml
+++ b/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,9 @@
-﻿@{
+﻿@using COMP2139_Assignment1.Areas.NorthPole.Models
+
+@{
+    @inject SignInManager<NorthPoleUser> SignInManager
+    @inject UserManager<NorthPoleUser> UserManager
+    @using Microsoft.AspNetCore.Identity
 }
 <nav class="navbar navbar-expand-sm navbar-toggleable-sm box-shadow mb-3">
     <div class="container-fluid">
@@ -8,7 +13,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse d-sm-inline-flex ">
-            <ul class="navbar-nav flex-grow-1 justify-content-end">
+            <ul class="navbar-nav align-items-center flex-grow-1 justify-content-end">
                 <li class="nav-item">
                     <a class="nav-link " asp-area="NorthPole" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i> Home</a>
                 </li>
@@ -21,13 +26,30 @@
                 <li class="nav-item">
                     <a class="nav-link " asp-area="NorthPole" asp-controller="Cars" asp-action="Index"><i class="fa-solid fa-car"></i>Car</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register"><i class="fa fa-user-plus" aria-hidden="true"></i> Register</a>
-                </li>
-
-                <li class="nav-item">
+                @if (SignInManager.IsSignedIn(User))
+                {
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage your account"><i class="fa fa-user-circle" aria-hidden="true"></i> Profile</a>
+                    </li>
+                                    <li class="nav-item">
                     <a class="nav-link " asp-area="NorthPole" asp-controller="Home" asp-action="About"><i class="fa-solid fa-circle-question"></i> About</a>
                 </li>
+                    <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                        <input type="submit" class="bttn button-dark padding" value="Log Out"  style="cursor:pointer" />
+                    </form>
+                }
+                else
+                {
+                    <li class="nav-item">
+                        <a class="nav-link " asp-area="Identity" asp-page="/Account/Login"><i class="fa fa-sign-in-alt" aria-hidden="true"></i> Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register"><i class="fa fa-user-plus" aria-hidden="true"></i> Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " asp-area="NorthPole" asp-controller="Home" asp-action="About"><i class="fa-solid fa-circle-question"></i> About</a>
+                    </li>
+                }
             </ul>
         </div>
     </div>
