Added ForgotPassword Page

--- a/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,19 +4,19 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Enter your email.</h2>
+<h1 class="text-center">@ViewData["Title"]</h1>
+<h4 class="text-center" >Enter your email.</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
+<div class="row d-flex justify-content-center align-items-center h-100">
+    <div class="col-md-4 d-flex flex-column w-100 align-items-center h-100">
+        <form method="post" class="w-350 fill-screen-sm justify-content-center d-flex flex-column align-items-center">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+            <div class="form-floating mb-3 w-100">
+                <input asp-for="Input.Email" class="form-control input-one w-100" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset Password</button>
+            <button type="submit" class="w-350 bttn button-one">Reset Password</button>
         </form>
     </div>
 </div>
