Fixed Logout issue,fixed Create Listing Bug, Redesigned and reformatted register

--- a/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,20 +12,27 @@
             <h1>@ViewData["Title"] to NP</h1>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.FirstName" class="form-control input-one" autocomplete="username" aria-required="true" placeholder="First Name" />
-                <label asp-for="Input.FirstName">First Name</label>
+            <div class="d-flex">
+            <div class="form-floating mb-3 w-50">
+                <input asp-for="Input.FirstName" class="form-control  input-one" autocomplete="username" aria-required="true" placeholder="First Name" />
+                <label asp-for="Input.FirstName">First Name *</label>
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
-            <div class="form-floating mb-3">
-                <input asp-for="Input.LastName" class="form-control input-one" autocomplete="username" aria-required="true" placeholder="First Name" />
-                <label asp-for="Input.LastName">Last Name</label>
+            <div class="form-floating mb-3 w-50">
+                <input asp-for="Input.LastName" class="form-control  input-one" autocomplete="username" aria-required="true" placeholder="First Name" />
+                <label asp-for="Input.LastName">Last Name *</label>
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
+            </div>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Email" class="form-control input-one" autocomplete="username" aria-required="true" placeholder="name@example.com" />
-                <label asp-for="Input.Email">Email</label>
+                <label asp-for="Input.Email">Email *</label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.PhoneNumber" class="form-control input-one" placeholder="Please enter your phone number." />
+                <label asp-for="Input.PhoneNumber" class="form-label"></label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
                 <input asp-for="Input.Password" class="form-control input-one" autocomplete="new-password" aria-required="true" placeholder="password" />
@@ -39,6 +46,9 @@
             </div>
             <button id="registerSubmit" type="submit" style="width:100%;" class="bttn button-one">Register</button>
         </form>
+        <p class="text-center mt-4">
+            <a asp-page="./Login" asp-route-returnUrl="@Model.ReturnUrl">Already Have An Account? Log In</a>
+        </p>
     </div>
 </div>
 
