--- a/Areas/NorthPole/Views/CarBookings/Index.cshtml
+++ b/Areas/NorthPole/Views/CarBookings/Index.cshtml
@@ -62,7 +62,7 @@
 			<p>There are currently no bookings for this Category, click on the button below to be the first!</p>
 		}
 		<p>
-            <a class="bttn button-one"  asp-action="Create" asp-route-CarId="@ViewData["CarId"]">Create a Car Booking!</a>
+			<a class="bttn button-one" asp-area="NorthPole" asp-action="Create" asp-route-CarId="@ViewData["CarId"]">Create a Car Booking!</a>
         </p>
     </body>
 </html>
