--- a/Areas/NorthPole/Views/Flights/Index.cshtml
+++ b/Areas/NorthPole/Views/Flights/Index.cshtml
@@ -22,7 +22,8 @@
 
                 <button class="bttn button-one mt-3 w-250" type="Submit">Search</button>
         <p>
-                    <a class ="bttn button-two mt-2 w-250" asp-area="" asp-action="Create">Add Flight</a>
+                    <a class="bttn button-two mt-2 w-250" asp-area="NorthPole" asp-action="Create">Add Flight</a>
+
         </p>
             </form>
 
