--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -94,7 +94,10 @@ header {
     background-color: #535C91;
     box-shadow: 1px 1px black;
 }
-
+    header h1, header p {
+        padding: 20px;
+        color: #d40000;
+    }
 nav {
     margin: 0 auto;
     width: 90%;
