--- a/Areas/NorthPole/Views/Cars/Index.cshtml
+++ b/Areas/NorthPole/Views/Cars/Index.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Cars";
 }
+@using COMP2139_Assignment1.Areas.NorthPole.Models
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<NorthPoleUser> userManager;
 <DOCTYPE html>
     <html>
     <head>
@@ -21,7 +24,11 @@
                     <input class="input-price input-one mt-3 " min="0" type="number" name="MaxPrice" placeholder="$Max Price" />
                 </div>
                 <button type="submit" class="bttn button-one mt-3 w-250">Search</button>
-                <a class="bttn button-two mt-2 w-250" asp-area="NorthPole" asp-action="Create">List a Car!</a>
+                @if (User.IsInRole("Admin"))
+                {
+                    <a class="bttn button-two mt-2 w-250" asp-area="NorthPole" asp-action="Create">List a Car!</a>
+                }
+                
 
         </form>
         <h2 class="mt-5 mb-5">Or browse the following</h2>
@@ -36,7 +43,7 @@
                     <div class="center-screen">
                             <a asp-area="NorthPole"  asp-controller="Cars" class="bttn button-one w-250" asp-action="Details" asp-route-carId="@car.CarId">View Details</a>
                             <a asp-area="NorthPole"  asp-controller="CarBookings" class="bttn button-two w-250 mt-2" asp-action="Create" asp-route-carId="@car.CarId">Book This Car!</a>
-                        <a asp-area="NorthPole" asp-controller="CarBookings" asp-action="Search" asp-route-CarId="@car.CarId" class="bttn button-three w-250 mt-2">View Bookings</a>
+                        <a asp-area="NorthPole" asp-controller="CarBookings" asp-action="Search" asp-route-CarId="@car.CarId" class="bttn button-three w-250 mt-2">View Availibility</a>
                     </div>
                  </div>
             }
