--- a/Areas/NorthPole/Views/Rooms/Details.cshtml
+++ b/Areas/NorthPole/Views/Rooms/Details.cshtml
@@ -37,11 +37,15 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-hotelId="@Model?.HotelId" class="bttn button-one">Edit</a> |
+
     <a href ='javascript:history.go(-1)' class="bttn button-two ms-2">
-        Back to List</a> |
-    <form asp-action="DeleteConfirmed" method="post" class="flight-action">
-        @Html.HiddenFor(model => model.RoomId)
-        <input type="submit" value="Delete" class="bttn button-danger ms-2" />
-    </form>
+        Back to List</a> 
+         @if (User.IsInRole("Admin"))
+    {
+        <form asp-action="DeleteConfirmed" method="post" class="flight-action">
+            @Html.HiddenFor(model => model.RoomId)
+            <input type="submit" value="Delete" class="bttn button-danger ms-2" />
+        </form>
+        <a asp-action="Edit" asp-route-hotelId="@Model?.HotelId" class="bttn button-one">Edit</a>
+    }
 </div>
