--- a/Areas/NorthPole/Views/Cars/Details.cshtml
+++ b/Areas/NorthPole/Views/Cars/Details.cshtml
@@ -62,7 +62,12 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="bttn button-one " asp-route-carId="@Model?.CarId">Edit</a> |
-    <a href='javascript:history.go(-1)' class="bttn button-two ms-2">Back to List</a> |
-    <a asp-action="Delete" class="bttn button-danger ms-2" asp-route-carId="@Model?.CarId">Delete</a>
+
+    
+    <a href='javascript:history.go(-1)' class="bttn button-two ms-2">Back to List</a> 
+     @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" class="bttn button-one " asp-route-carId="@Model?.CarId">Edit</a>
+        <a asp-action="Delete" class="bttn button-danger ms-2" asp-route-carId="@Model?.CarId">Delete</a>
+    }
 </div>
