--- a/Areas/NorthPole/Views/Hotels/Details.cshtml
+++ b/Areas/NorthPole/Views/Hotels/Details.cshtml
@@ -37,11 +37,13 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" class="bttn button-one" asp-route-hotelId="@Model?.HotelId">Edit</a> |
-    <form asp-action="DeleteConfirmed" method="post" class="flight-action">
+         @if (User.IsInRole("Admin"))
+    {
+        <a asp-action="Edit" class="bttn button-one" asp-route-hotelId="@Model?.HotelId">Edit</a>
+<form asp-action="DeleteConfirmed" method="post" class="flight-action">
         @Html.HiddenFor(model => model.HotelId)
         <input type="submit" value="Delete" class="btn btn-danger" />
-    </form> |
+    </form> }
     <a href='javascript:history.go(-1)' class="bttn button-two ms-2">Back to List</a>
 </div>
 
