--- a/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -4,30 +4,29 @@
     ViewData["Title"] = "Reset password";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Reset your password.</h2>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
+<div class="row d-flex flex-column justify-content-center align-items-center h-70v">
+    <div class="w-50 ">
+
+        <h2 class="text-center">Reset your password.</h2>
+        <form method="post" class="d-flex flex-column justify-content-center align-items-center">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <input asp-for="Input.Code" type="hidden" />
             <div class="form-floating mb-3">
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" placeholder="name@example.com" />
+                <input asp-for="Input.Email" class="form-control input-one" autocomplete="username" aria-required="true" placeholder="name@example.com" />
                 <label asp-for="Input.Email" class="form-label"></label>
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your password." />
+                <input asp-for="Input.Password" class="form-control input-one" autocomplete="new-password" aria-required="true" placeholder="Please enter your password." />
                 <label asp-for="Input.Password" class="form-label"></label>
                 <span asp-validation-for="Input.Password" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your password." />
+                <input asp-for="Input.ConfirmPassword" class="form-control input-one" autocomplete="new-password" aria-required="true" placeholder="Please confirm your password." />
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
+            <button type="submit" class="bttn button-one w-125 ">Reset</button>
         </form>
     </div>
 </div>
