Finished Profile Uploading In Manage

--- a/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,5 +1,4 @@
-﻿@using COMP2139_Assignment1.Areas.NorthPole.Models
-@inject SignInManager<NorthPoleUser> SignInManager
+﻿@inject SignInManager<NorthPoleUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
