--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -8,45 +8,60 @@
 <h3>@ViewData["Title"]</h3>
 <partial name="_StatusMessage" model="Model.StatusMessage" />
 <partial name="_StatusMessage" model="Model.UserChangeLimitStatusMessage" />
-<form id="profile-form" method="post" enctype="multipart/form-data">
-    <div class="row">
+<form id="profile-form" method="post"  enctype="multipart/form-data">
+    <div class="row d-flex align-items-start">
         <div class="col-md-6">
 
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
-                <input asp-for="Username" class="form-control" placeholder="Please choose your username." />
+                <input asp-for="Username" class="form-control input-one" placeholder="Please choose your username." />
                 <label asp-for="Username" class="form-label"></label>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.FirstName" class="form-control" placeholder="Please enter your First Name." />
+                <input asp-for="Input.FirstName" class="form-control input-one" placeholder="Please enter your First Name." />
                 <label asp-for="Input.FirstName" class="form-label"></label>
                 <span asp-validation-for="Input.FirstName" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.LastName" class="form-control" placeholder="Please enter your Last Name." />
+                <input asp-for="Input.LastName" class="form-control input-one" placeholder="Please enter your Last Name." />
                 <label asp-for="Input.LastName" class="form-label"></label>
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number." />
+                <input asp-for="Input.PhoneNumber" class="form-control input-one" placeholder="Please enter your phone number." />
                 <label asp-for="Input.PhoneNumber" class="form-label"></label>
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Country" class="form-control input-one" placeholder="Please enter your Country." />
+                <label asp-for="Input.Country" class="form-label"></label>
+                <span asp-validation-for="Input.Country" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.City" class="form-control input-one" placeholder="Please enter your Country." />
+                <label asp-for="Input.City" class="form-label"></label>
+                <span asp-validation-for="Input.City" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Address" class="form-control input-one" placeholder="Please enter your Country." />
+                <label asp-for="Input.Address" class="form-label"></label>
+                <span asp-validation-for="Input.Address" class="text-danger"></span>
+            </div>
+            <button id="update-profile-button" type="submit" class="w-100 button-one bttn">Save</button>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 d-flex flex-column justify-content-center align-items-center h-100">
             <!-- Profile Picture Upload -->
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"> </div>
-            <label asp-for="Input.ProfilePicture" style="width:100%;"></label>
+
             @if (Model.Input.ProfilePicture != null)
             {
-                <img id="profilePicture" style="width:350px; height:350px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.Input.ProfilePicture))" />
+                <img id="profilePicture" style="width:300px; height:300px; object-fit:cover" src="data:image/*;base64,@(Convert.ToBase64String(Model.Input.ProfilePicture))" />
             }
             else
             {
-                <img id="profilePicture" style="width:350px; height:350px; object-fit:cover" src="" />
+                <img id="profilePicture" style="width:300px; height:300px; object-fit:cover" src="" />
             }
-            <input type="file" accept=".png,.jpg,.jpeg,.gif,.tif" asp-for="Input.ProfilePicture" class="form-control" style="border:0px !important; padding:10px; padding-top:10px; padding-bottom:30px;"
+            <input type="file" accept=".png,.jpg,.jpeg,.gif,.tif" asp-for="Input.ProfilePicture" class="form-control" style="border:0px !important; width:300px "
                    onchange="document.getElementById('profilePicture').src=window.URL.createObjectURL(this.files[0])" />
         </div>
     </div>
