--- a/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/SetPassword.cshtml
@@ -11,7 +11,7 @@
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
 </p>
-<div class="row">
+<div class="row row d-flex justify-content-center align-content-center">
     <div class="col-md-6">
         <form id="set-password-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
