--- a/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/TwoFactorAuthentication.cshtml
@@ -7,7 +7,8 @@
 }
 
 <partial name="_StatusMessage" for="StatusMessage" />
-<h3>@ViewData["Title"]</h3>
+<h3 class="text-center">@ViewData["Title"]</h3>\
+<div class="d-flex flex-column  justify-content-center align-content-center">
 @{
     var consentFeature = HttpContext.Features.Get<ITrackingConsentFeature>();
     @if (consentFeature?.CanTrack ?? true)
@@ -46,15 +47,15 @@
             <a asp-page="./GenerateRecoveryCodes" class="btn btn-primary">Reset recovery codes</a>
         }
 
-        <h4>Authenticator app</h4>
+        <h4 class="text-center">Authenticator app</h4>
         @if (!Model.HasAuthenticator)
         {
             <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-primary">Add authenticator app</a>
         }
         else
         {
-            <a id="enable-authenticator" asp-page="./EnableAuthenticator" class="btn btn-primary">Set up authenticator app</a>
-            <a id="reset-authenticator" asp-page="./ResetAuthenticator" class="btn btn-primary">Reset authenticator app</a>
+                <a class="w-350 align-self-center button-one bttn mt-3" id="enable-authenticator" asp-page="./EnableAuthenticator">Set up authenticator app</a>
+                <a class="w-350 align-self-center button-one bttn mt-3" id="reset-authenticator" asp-page="./ResetAuthenticator" >Reset authenticator app</a>
         }
     }
     else
@@ -65,6 +66,7 @@
         </div>
     }
 }
+</div>
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
