--- a/Areas/NorthPole/Views/Cars/Edit.cshtml
+++ b/Areas/NorthPole/Views/Cars/Edit.cshtml
@@ -59,7 +59,7 @@
                 <span asp-validation-for="RentalCompany" class="text-danger"></span>
             </div>
             <div class="form-group mt-3">
-                <input type="submit" value="Save" class="bttn button-one" /> |
+                <input type="submit" value="Save" class="bttn button-one" /> 
                 <a asp-action="Index" class="bttn button-two">Back to List</a>
             </div>
         </form>
