--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -354,10 +354,15 @@ w-125{
     background-color:transparent;
 
 }
+#admin-button{
+    margin-bottom:0;
+}
 
 /*Media query*/
 @media (max-width: 576px) {
-
+    #admin-button {
+        margin-bottom: 5px;
+    }
     .index-div {
         padding: 20px;
     }
@@ -375,6 +380,9 @@ w-125{
 }
 
 @media (min-width: 576px) {
+    #admin-button {
+        margin-bottom: 5px;
+    }
     .index-div {
         padding: 20px;
     }
@@ -388,6 +396,9 @@ w-125{
 }
 
 @media (min-width: 768px) {
+    #admin-button {
+        margin-bottom: 5px;
+    }
     .index-div {
         padding: 50px;
     }
@@ -407,9 +418,15 @@ w-125{
 }
 
 @media (min-width: 1200px) {
+    #admin-button {
+        margin-bottom: 0px;
+    }
 }
 
 @media (min-width: 1400px) {
+    #admin-button {
+        margin-bottom: 0px;
+    }
 }
 
 
