Fixed bugs that did not allow Admin to view Users Profile

--- a/Areas/NorthPole/Views/CarBookings/Index.cshtml
+++ b/Areas/NorthPole/Views/CarBookings/Index.cshtml
@@ -58,6 +58,7 @@
 										$@finalPrice
 									</td>
 									<td>@carBooking.User.Email</td>
+									<td><a class="bttn button-one" asp-area="NorthPole" asp-controller="User" asp-action="Index" asp-route-userId="@carBooking.User.Id">View User</a></td>
 								}
 
 
